sources/api/schnauzer/tests/templates/fails/02_valid_toml_extra_fields.template
[required-extensions]
puppies = "yes"
[extraneous-key]
kittens = "also yes"
+++
